# eb6_robot

./: README.md
ai_chat/: CMakeLists.txt  README.md  package.xml  setup.py
ai_chat/config/: intent.yaml
ai_chat/launch/: ai_chat.launch
ai_chat/src/ai_chat/: ai_chat.py  ai_microphone.py  gpt_interface.py  gpt_test.py  intent.py
behavior_msgs/: CMakeLists.txt  README.md  package.xml
body_tracker_msgs/msg/: BodyTracker.msg
depthimage_to_laserscan/launch/: depthimage_to_laserscan_reference.launch
dynamixel_motor/: README.md
dynamixel_motor/dynamixel_controllers/: CMakeLists.txt
dynamixel_motor/dynamixel_controllers/nodes/: controller_manager.py  controller_spawner.py
dynamixel_motor/dynamixel_controllers/srv/: SetDGain.srv  (+2 more)
dynamixel_motor/dynamixel_msgs/: CMakeLists.txt
eb/Arduino/: Example_72-head_arduino_feather.rules  README.md
eb/eb/: CMakeLists.txt  package.xml
eb/eb/config/udev/: 63-head_arduino_m4.rules  64-body_arduino_m4.rules  68-usb2dynamixel.rules  README.md
eb/eb/launch/: ai_debug.launch  arduino_body_test.launch  arduino_head_test.launch  behavior_debug.launch  hardware_test.launch  robot.launch  robot_boot2.launch  sensor_test.launch  wheel_debug.launch
eb/eb/launch/Backup/: test0.launch  test2.launch  test3.launch  test4.launch  test5.launch  test_speech.launch  walking_test.launch
eb/eb/launch/examples/: Xarduino_test (copy).launch  joytest.launch  tracker.launch
eb/eb/launch/include/: arduinos.launch  base.launch  base_test.launch  depthimage_to_laserscan.launch  eb_joystick.launch  eye_camera.launch  rgb_1280_eye_camera.launch  rgb_1920_eye_camera.launch  rgb_320_eye_camera.launch  rgb_640_eye_camera.launch  rs2_640_aligned_depth.launch  rs_1920_aligned_depth.launch  rs_848_aligned_depth.launch  rs_848_depth_only.launch  sensor_fusion.launch  speech_recognition.launch
eb/eb/launch/include/Backup/: ncs_people_detection.launch  ncs_realsense.launch  realsense2_tensorflow.launch
eb/eb/launch/include/tensorflow/: action_recognition.launch  cob_face_recognizer.launch  cob_people_object_detection_tensorflow.launch  cob_people_object_tracker.launch  projection.launch  tensorflow_realsense.launch
eb/eb/param/: cmd_vel_mux.yaml
eb/eb_behaviors/: CMakeLists.txt  README.md  package.xml  setup.py
eb/eb_face_tracker/: CMakeLists.txt  README.md  package.xml  setup.py
eb/eb_joystick_button_cmds/: CMakeLists.txt  README.md  package.xml
eb/eb_joystick_button_cmds/launch/: eb_joystick_button_cmds.launch
eb/eb_joystick_button_cmds/scripts/: eb_joystick_button_cmds.py
eb/eb_pose_training/: CMakeLists.txt  README.md  package.xml
eb/eb_pose_training/launch/: eb_pose_training.launch  playback_servos_test.launch  record_servos.launch
eb/eb_pose_training/scripts/: eb_pose_training.py  playback_servos.py  record_battery.py  record_servos.py
eb/eb_servos/: CMakeLists.txt  README.md  package.xml  setup.py
eb/eb_sysmon/: CMakeLists.txt  README.md  body_led_meanings.txt  package.xml  setup.py
eb/eb_teleop/: CMakeLists.txt  README.md  package.xml
eb/eb_teleop/launch/: keyboard_teleop.launch
eb/eb_teleop/scripts/: eb_teleop_continuous_test  eb_teleop_key  eb_teleop_manual
eb/eb_walk/: CMakeLists.txt  README.md  battery_discharge_rate.txt  package.xml
eb/eb_wheel_control/: CMakeLists.txt  README.md  package.xml  setup.py
face_detector/: CMakeLists.txt  README.md  package.xml  setup.py
face_detector/launch/: face_detector.launch  face_detector_params.yaml
face_recognizer/launch/: face_recognizer.launch  face_recognizer_params.yaml
face_recognizer/src/: face_recognizer.py
pcl_object_detecton/: CMakeLists.txt  README.md  package.xml
pcl_object_detecton/launch/: pcl_object_detection.launch
pcl_object_detecton/src/: pcl_object_detection_node.cpp
robot_sounds/: CMakeLists.txt  README.md
robot_sounds/src/: sound_server.py
robot_voice/: CMakeLists.txt  README.md  package.xml
robot_voice/launch/: robot_voice.launch
robot_voice/src/: direct_voice.py  speech_server.py
sensor_fusion/: CMakeLists.txt  README.md  package.xml
sensor_fusion/src/: sensor_fusion.py
sensor_summary_msgs/: CMakeLists.txt  README.md  package.xml
sensor_summary_msgs/msg/: SensorSummary.msg
servo_test/: CMakeLists.txt  package.xml  setup.py
servo_test/config/: dynamixel_params.yaml
servo_test/launch/: servo_test.launch
servo_test/scripts/: dynamixel_joint_state_publisher.py
servo_test/srv/: ReturnJointStates.srv
servo_test/udev/: README.md
simple_move_msgs/: CMakeLists.txt  README.md  package.xml
simple_move_msgs/msg/: SimpleMove.msg
streaming_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
streaming_recognition/launch/: keyword_streaming_speech.launch  streaming_recognition.launch  test_reco.launch
streaming_recognition/src/streaming_recognition/: keyword_detector.py  microphone_stream.py  streaming_speech_reco.py
system_status_msgs/: CMakeLists.txt  README.md  package.xml
system_status_msgs/msg/: SystemStatus.msg
wifi_connect/: CMakeLists.txt  README.md  package.xml
wifi_connect/examples/: robot_boot1.launch  robot_boot1.sh  robot_boot2.launch  robot_boot2.sh
wifi_connect/launch/: wifi_connect.launch
wifi_connect/src/: wifi_connect.py
yolo_body_tracker/: CMakeLists.txt  README.md  package.xml  setup.py
yolo_body_tracker/launch/: proto_yolo_body_tracker.launch  yolo_body_tracker.launch  yolo_body_tracker_params.yaml
yolo_body_tracker/src/yolo_body_tracker/: proto_yolo_body_tracker.py  yolo_body_tracker.py
(+143 files in other folders)
