<?xml version="1.0"?>
<package format="2">
  <name>sensor_summary_msgs</name>
  <version>0.1.0</version>
  <description>sensor summary custom message</description>
  <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
  <url>https://github.com/shinselrobots</url>
  <license>Apache-2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>


</package>
