<package format="2">
  <name>streaming_recognition</name>
  <version>0.0.0</version>
  <description>Google Cloud Streaming Speech Recognition</description>
  <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>





</package>
