<package>
  <name>yolo_body_tracker</name>
  <version>0.0.0</version>
  <description>Face Detecting using mediapipe </description>
  <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <!-- 
  <run_depend>cob_perception_msgs</run_depend>
  -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
